--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,10 +1,7 @@
-.h-entry {
-  max-inline-size: 76ch;
-  margin-inline: auto;
+.e-content {
   line-height: 1.6;
 }
 
-.h-entry > header,
 .e-content > :not(:is(pre, img)) {
   padding-inline: var(--gutter);
 }
@@ -44,10 +41,6 @@
 
 .e-content :is(ol, ul) {
   list-style-position: inside;
-}
-
-h1 {
-  font-size: clamp(1.5rem, 1.5rem + 3vw, 3.5rem);
 }
 
 code {
