--- a/styles/main.css
+++ b/styles/main.css
@@ -8,21 +8,27 @@ html {
   --space-7: 1.75rem;
   --space-8: 2rem;
   --space-9: 4rem;
-  --shade-1: hsl(90, 90%, 98%);
-  --shade-2: hsl(94, 82%, 92%);
-  --shade-3: hsl(98, 72%, 87%);
-  --shade-4: hsl(106, 60%, 75%);
-  --shade-5: hsl(110, 54%, 61%);
-  --shade-6: hsl(114, 50%, 48%);
-  --shade-7: hsl(118, 48%, 42%);
-  --shade-8: hsl(122, 48%, 34%);
-  --shade-9: hsl(126, 45%, 27%);
-  --shade-10: hsl(130, 42%, 23%);
-  --shade-11: hsl(134, 40%, 18%);
-  --shade-12: hsl(138, 38%, 8%);
-  --contrast: hsl(30, 80%, 60%);
-  --text: var(--shade-9);
-  --text-bright: var(--shade-6);
+  --h: 140;
+  --shade-1: hsl(var(--h), 90%, 98%);
+  --shade-2: hsl(calc(var(--h) + 4), 82%, 92%);
+  --shade-3: hsl(calc(var(--h) + 8), 72%, 87%);
+  --shade-4: hsl(calc(var(--h) + 12), 60%, 75%);
+  --shade-5: hsl(calc(var(--h) + 16), 54%, 61%);
+  --shade-6: hsl(calc(var(--h) + 20), 50%, 48%);
+  --shade-7: hsl(calc(var(--h) + 24), 48%, 42%);
+  --shade-8: hsl(calc(var(--h) + 28), 48%, 34%);
+  --shade-9: hsl(calc(var(--h) + 32), 45%, 27%);
+  --shade-10: hsl(calc(var(--h) + 36), 42%, 23%);
+  --shade-11: hsl(calc(var(--h) + 40), 40%, 18%);
+  --shade-12: hsl(calc(var(--h) + 44), 38%, 8%);
+  --contrast: hsl(calc(320), 70%, 56%);
+  /* --contrast: hsl(calc(315 + 48), 65%, 56%); */
+  --text-light: var(--shade-9);
+  --text-dark: var(--shade-1);
+  --text: var(--text-light);
+  --text-dim: var(--shade-5);
+  --text-bright: var(--shade-7);
+  --border-dim: var(--shade-3);
   --code-1: var(--shade-5);
   --code-2: var(--shade-7);
   --code-3: var(--shade-8);
@@ -44,7 +50,6 @@ html {
   color-scheme: light dark;
   scroll-padding-block: var(--space-6);
   scroll-behavior: smooth;
-  scrollbar-gutter: stable both-edges;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -61,13 +66,15 @@ html {
     --shade-10: hsl(180, 32%, 23%);
     --shade-11: hsl(184, 30%, 15%);
     --shade-12: hsl(188, 28%, 8%);
-    --text: var(--shade-1);
+    --text: var(--text-dark);
+    --text-bright: var(--shade-6);
     --code-1: var(--shade-7);
     --code-2: var(--shade-6);
     --code-3: var(--shade-4);
     --code-4: var(--shade-3);
     --bg: var(--shade-12);
     --bg-dim: var(--shade-11);
+    --border-dim: var(--shade-10);
   }
 }
 
@@ -91,19 +98,26 @@ a:hover {
   text-decoration-line: underline;
 }
 
-:is(a, input):focus {
+/* All links get a nice default outline */
+a:focus {
   outline: 0.125rem solid var(--contrast);
-  outline-offset: 0.125rem;
+  outline-offset: 0.25rem;
+}
+
+/* Links with no other styles get a nice rounded outline */
+a:not([class]):focus {
   border-radius: 2px;
 }
 
-:is(a, input):focus:not(:focus-visible) {
+/* Prevents outline if focused with e.g. mouse click */
+a:focus:not(:focus-visible) {
   outline: 0;
 }
 
 input {
   border: 0;
   border-radius: 2px;
+  font: inherit;
   color: inherit;
 }
 
@@ -133,11 +147,10 @@ h5 {
 }
 
 body {
-  font-family: system-ui, sans-serif;
   font-family: "Spectral", georgia, serif;
+  font-family: system-ui, sans-serif;
   display: grid;
   min-height: 100vh;
-  grid-template-rows: auto 1fr auto;
   /* !IMPORTANT stops horizontal overflow/blowout */
   grid-template-columns: minmax(0, 1fr);
 }
@@ -214,6 +227,10 @@ body {
   padding-block: var(--space-8);
 }
 
+.py-9 {
+  padding-block: var(--space-9);
+}
+
 .pt-8 {
   padding-block-start: var(--space-8);
 }
@@ -232,6 +249,10 @@ body {
 
 .gutter {
   padding-inline: var(--gutter);
+}
+
+.items-start {
+  align-items: start;
 }
 
 .items-center {
@@ -254,24 +275,23 @@ body {
   font-weight: bold;
 }
 
+.font-sans {
+  font-family: system-ui, sans-serif;
+}
+
 .text-small,
 small {
   font-size: 0.875em;
 }
 
-nav a[aria-current]:hover > svg {
-  animation: pop 0.15s;
+a[aria-current="true"],
+a[aria-current="page"] {
+  font-weight: bold;
 }
 
-nav a[aria-current="true"] > svg,
-nav a[aria-current="page"] > svg {
+a[aria-current="true"] > svg,
+a[aria-current="page"] > svg {
   color: var(--contrast);
-}
-
-@keyframes pop {
-  to {
-    scale: 1.2;
-}
 }
 
 .color-bright {
@@ -340,6 +360,12 @@ nav a[aria-current="page"] > svg {
 
 .skip {
   position: absolute;
+  inset-block-start: var(--space-3);
+  inset-inline-start: var(--space-3);
+  padding-block: var(--space-1);
+  padding-inline: var(--space-2);
+  background-color: var(--bg);
+  border-radius: 2px;
 }
 
 .skip:not(:focus):not(:active) {
@@ -361,4 +387,267 @@ nav a[aria-current="page"] > svg {
 .switcher > * {
   flex-grow: 1;
   flex-basis: calc((var(--break) - (100% - var(--gap))) * 999);
+}
+
+.Profile {
+  block-size: 100%;
+  max-inline-size: 38rem;
+  margin-inline: auto;
+  --py: var(--space-3);
+  --px: var(--space-5);
+}
+
+@media (min-width: 38rem) {
+  .Profile {
+    border-inline: 1px solid var(--border-dim);
+  }
+}
+
+:is(.Profile, .Feed) > *:not(:last-child) {
+  border-block-end: 1px solid var(--border-dim);
+}
+
+.ProfileHeader {
+  padding-block-end: var(--space-8);
+  padding-inline: var(--px);
+}
+
+.ProfileCover {
+  margin-inline: calc(var(--px) * -1);
+  margin-block-end: -64px;
+  block-size: 8rem;
+  --s: 80px;
+  --c1: var(--bg);
+  --c2: var(--contrast);
+
+  --_g: var(--c1) 0% 5%, var(--c2) 6% 15%, var(--c1) 16% 25%, var(--c2) 26% 35%,
+    var(--c1) 36% 45%, var(--c2) 46% 55%, var(--c1) 56% 65%, var(--c2) 66% 75%,
+    var(--c1) 76% 85%, var(--c2) 86% 95%, #0000 96%;
+  background: radial-gradient(50% 50% at 100% 0, var(--_g)),
+    radial-gradient(50% 50% at 0 100%, var(--_g)),
+    radial-gradient(50% 50%, var(--_g)),
+    radial-gradient(50% 50%, var(--_g)) calc(var(--s) / 2) calc(var(--s) / 2)
+      var(--c1);
+  background-size: var(--s) var(--s);
+}
+
+.ProfileAvatar {
+  border: 0.25rem solid var(--bg);
+  border-radius: 50%;
+}
+
+.ProfileButton {
+  border-radius: 999px;
+  display: inline-flex;
+  align-items: center;
+  gap: var(--space-1);
+  padding-block: var(--space-2);
+  padding-inline: var(--space-3);
+  background-color: var(--contrast);
+  color: var(--text-dark);
+  font-weight: bold;
+}
+
+.Sticky {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background-color: var(--bg);
+}
+
+.SearchInput {
+  border-radius: 0;
+  padding-block: var(--py);
+  padding-inline: var(--px);
+  padding-inline-start: calc(var(--px) + 20px + var(--space-1));
+  background-color: var(--bg-dim);
+}
+
+.SearchInput:focus {
+  outline: 0.125rem solid var(--contrast);
+  outline-offset: -0.125rem;
+}
+
+.Search svg {
+  margin-inline-start: var(--px);
+  color: var(--text-bright);
+}
+
+.ProfileNav {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr;
+  font-size: var(--font-2);
+  overflow: auto;
+  --scroll-bg: var(--bg);
+  --scroll-fg: var(--border-dim);
+  scrollbar-color: var(--scroll-fg) var(--scroll-bg);
+  scrollbar-width: thin;
+}
+
+.ProfileNav::-webkit-scrollbar {
+  height: var(--space-1);
+}
+
+.ProfileNav::-webkit-scrollbar-thumb {
+  background: var(--scroll-fg);
+}
+
+.ProfileNav::-webkit-scrollbar-track {
+  background: var(--scroll-bg);
+}
+
+.ProfileNavLink {
+  display: flex;
+  justify-content: center;
+  gap: var(--space-1);
+  padding-block: var(--py);
+  padding-inline: calc(var(--px) / 2);
+  transition: background-color 0.2s;
+}
+
+.ProfileNavLink:is(:hover, :focus):not([title="Coming soon"]) {
+  text-decoration: none;
+  background-color: var(--bg-dim);
+}
+
+.ProfileNavLink:is(:hover, :focus):not([title="Coming soon"]) svg {
+  color: var(--contrast);
+}
+
+.ProfileNavLink:focus {
+  outline-offset: -0.125rem;
+}
+
+.ProfileNavLink[title="Coming soon"] {
+  cursor: not-allowed;
+}
+
+.ProfileNavLink[title="Coming soon"]:hover {
+  text-decoration: none;
+}
+
+.Entry {
+  display: grid;
+  grid-template-columns: var(--img) 1fr;
+  grid-template-rows: auto auto 1fr;
+  grid-template-areas:
+    "icon meta"
+    "avatar title"
+    "avatar content"
+    "avatar tags";
+  gap: var(--space-2);
+  padding: var(--px);
+  padding-block-end: var(--space-8);
+  line-height: 1;
+  font-family: system-ui, sans-serif;
+  transition: background-color 0.2s;
+  position: relative;
+}
+
+.Entry:hover {
+  background-color: var(--bg-dim);
+}
+
+.Entry:focus-within {
+  outline: 0.125rem solid var(--contrast);
+  outline-offset: -0.125rem;
+  background-color: var(--bg-dim);
+}
+
+.EntryIcon {
+  grid-area: icon;
+  justify-self: end;
+  color: var(--text-bright);
+}
+
+.EntryMeta {
+  grid-area: meta;
+}
+
+.EntryKind {
+  text-transform: capitalize;
+  /* font-size: var(--font-2); */
+  align-self: end;
+  color: var(--text-bright);
+  font-family: system-ui, sans-serif;
+}
+
+.EntryLink:hover {
+  text-decoration: none;
+}
+
+.EntryLink:focus {
+  outline: none;
+}
+
+.EntryLink::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+}
+
+.EntryTitle {
+  grid-area: title;
+  font-size: 1rem;
+}
+
+.EntryAvatar {
+  grid-area: avatar;
+}
+
+.EntryAvatar img {
+  border-radius: 50%;
+}
+
+.EntryMeta {
+  display: flex;
+  gap: var(--space-1);
+  align-items: center;
+  font-size: var(--font-2);
+  color: var(--text-bright);
+}
+
+.EntryMeta .p-name {
+  font-weight: bold;
+  /* font-size: var(--font-2); */
+  color: var(--text);
+}
+
+.EntryContent {
+  grid-area: content;
+  line-height: 1.4;
+}
+
+.EntryContent > * + * {
+  margin-block-start: var(--space-2);
+}
+
+.EntryMedia {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
+  align-items: stretch;
+  gap: var(--space-1);
+  border-radius: var(--space-4);
+  overflow: hidden;
+  position: relative;
+}
+
+.EntryMedia > img {
+  object-fit: cover;
+}
+
+.EntryTags {
+  grid-area: tags;
+  font-size: var(--font-2);
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+  --px: var(--space-1);
+  /* Ensure tags line up with container edge */
+  margin-inline: calc(var(--px) * -1);
+}
+
+.EntryTags a {
+  padding-inline: var(--px);
 }
