Ensure first heading hash in right place

--- a/styles/article.css
+++ b/styles/article.css
@@ -10,9 +10,12 @@
   margin-top: var(--space-4);
 }
 
+.ArticleContent :is(h2, h3, h4, h5, h6) {
+  position: relative;
+}
+
 .ArticleContent * + :is(h2, h3, h4, h5, h6) {
   margin-top: 2em;
-  position: relative;
 }
 
 .ArticleContent a {
