--- a/styles/article.css
+++ b/styles/article.css
@@ -2,12 +2,12 @@
   line-height: 1.6;
 }
 
-.ArticleContent > :not(:is(pre, img)) {
+.ArticleContent > :not(:is(img)) {
   padding-inline: var(--gutter);
 }
 
 .ArticleContent > * + * {
-  margin-top: var(--space-4);
+  margin-block-start: var(--space-4);
 }
 
 .ArticleContent :is(h2, h3, h4, h5, h6) {
@@ -15,10 +15,11 @@
 }
 
 .ArticleContent * + :is(h2, h3, h4, h5, h6) {
-  margin-top: 2em;
+  margin-block-start: 2em;
 }
 
 .ArticleContent a {
+  border-radius: 2px;
   text-decoration: underline;
 }
 
@@ -34,7 +35,7 @@
   display: inline-flex;
   align-items: center;
   left: calc(var(--gutter) / 2);
-  opacity: 0.33;
+  opacity: 0.5;
   transition: opacity 0.2s;
 }
 
@@ -46,40 +47,66 @@
   list-style-position: inside;
 }
 
-code {
+code:not([class]) {
   box-decoration-break: clone;
   border-radius: 2px;
   padding: var(--space-1);
-  font-size: 0.75rem;
+  font-size: var(--font-1);
   font-family: ui-monospace, monospace;
   background-color: var(--bg-dim);
+  box-shadow: inset 0 0 2px var(--border-dim);
 }
 
-pre > code {
-  display: block;
-  padding: var(--space-4) var(--gutter);
-  line-height: 1.375;
+.Code {
+  --code-1: hsl(160, 10%, 42%);
+  --code-2: hsl(168, 47%, 34%);
+  --code-3: hsl(172, 50%, 24%);
+  --code-4: hsl(178, 40%, 14%);
+  display: grid;
+  gap: var(--space-4);
+  padding-block: var(--space-4);
   background-color: var(--bg-dim);
+  font-size: var(--font-1);
+  line-height: 1.4;
+  font-family: ui-monospace, monospace;
   overflow: auto;
   scrollbar-color: var(--text-bright) var(--bg-dim);
   scrollbar-width: thin;
 }
 
-pre > code::-webkit-scrollbar {
+@media (prefers-color-scheme: dark) {
+  .Code {
+    --code-1: var(--shade-7);
+    --code-2: var(--shade-6);
+    --code-3: var(--shade-4);
+    --code-4: var(--shade-3);
+  }
+}
+
+.Code::-webkit-scrollbar {
   height: var(--space-1);
 }
 
-pre > code::-webkit-scrollbar-thumb {
+.Code::-webkit-scrollbar-thumb {
   background: var(--text-bright);
   border-radius: 1rem;
 }
 
-pre > code::-webkit-scrollbar-track {
+.Code::-webkit-scrollbar-track {
   background: var(--bg-dim);
+}
+
+.CodeFile {
+  display: flex;
+  gap: var(--space-1);
+  align-items: center;
+  font-weight: bold;
+  color: var(--code-2);
 }
 
 pre,
 .token {
+  font-weight: normal;
   color: var(--code-3);
 }
 
@@ -91,10 +118,6 @@ pre,
   color: var(--code-2);
 }
 
-.token:is(.attr-name, .attr-value) {
-  font-weight: normal;
-}
-
 .token:is(.key, .property, .attr-value) {
   color: var(--code-4);
 }
@@ -104,6 +127,6 @@ pre,
 }
 
 .token:is(.function, .tag, .selector) {
-  color: var(--code-4);
+  color: var(--code-2);
   font-weight: bold;
 }
