Fix article padding in Firefox
:has isn't supported until version 121 (soon!)

--- a/styles/article.css
+++ b/styles/article.css
@@ -2,7 +2,7 @@
   line-height: 1.6;
 }
 
-.ArticleContent > :not(:is(img, table), p:has(> img, > video)) {
+.ArticleContent > :not(:is(img, table p:has(> img, > video))) {
   padding-inline: var(--gutter);
 }
 
